--- a/chat-app/single-deploy/nginx.conf
+++ b/chat-app/single-deploy/nginx.conf
@@ -70,8 +70,8 @@ server {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
-    # 客户端请求限制
-    client_max_body_size 10M;
+    # 客户端请求限制（支持 50MB 视频上传）
+    client_max_body_size 60M;
 
     # 前端静态文件
     root /opt/chat-app/chat-app/client/dist/build/h5;
@@ -151,6 +151,28 @@ server {
 
         # 允许跨域（图片等资源）
         add_header Access-Control-Allow-Origin "*";
+    }
+
+    # 视频文件专用配置（支持断点续传和流式传输）
+    location /uploads/videos/ {
+        alias /opt/chat-app/chat-app/server/uploads/videos/;
+
+        # 支持断点续传
+        add_header Accept-Ranges bytes;
+
+        # 长缓存
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+
+        # 允许跨域
+        add_header Access-Control-Allow-Origin "*";
+
+        # 视频 MIME 类型
+        types {
+            video/mp4 mp4;
+            video/webm webm;
+            video/quicktime mov;
+        }
     }
 
     # 健康检查
