--- a/chat-app/single-deploy/nginx.conf
+++ b/chat-app/single-deploy/nginx.conf
@@ -117,6 +117,31 @@ server {
         proxy_buffers 8 4k;
     }
 
+    # 上传 API 专用配置（更长超时时间）
+    location /api/upload/ {
+        proxy_pass http://chat_backend;
+        proxy_http_version 1.1;
+
+        # 请求头
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 上传超时设置（更长时间）
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+
+        # 关闭缓冲，允许流式上传
+        proxy_buffering off;
+        proxy_request_buffering off;
+
+        # 增大请求体限制
+        client_max_body_size 60M;
+        client_body_timeout 300s;
+    }
+
     # WebSocket 代理
     location /socket.io/ {
         proxy_pass http://chat_backend;
