管理后台初步完成-部署

--- a/chat-app/single-deploy/.env.example
+++ b/chat-app/single-deploy/.env.example
@@ -37,6 +37,10 @@ DB_NAME=chat_app
 # 生成方法: openssl rand -base64 32
 JWT_SECRET=your_very_long_random_jwt_secret_key_here
 
+# 管理员 JWT 密钥（用于后台管理系统认证）
+# 生成方法: openssl rand -base64 32
+ADMIN_JWT_SECRET=your_admin_jwt_secret_key_here
+
 #--------------------------------------
 # CORS 配置
 #--------------------------------------
