--- a/chat-app/single-deploy/nginx.conf
+++ b/chat-app/single-deploy/nginx.conf
@@ -95,6 +95,26 @@ server {
         }
     }
 
+    # 管理后台前端
+    location /admin/ {
+        alias /opt/LT/chat-app/admin/dist/;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html;
+
+        # HTML 文件不缓存
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+
+        # 静态资源缓存
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 7d;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
     # API 代理
     location /api/ {
         proxy_pass http://chat_backend;
