--- a/chat-app/single-deploy/Dockerfile.server
+++ b/chat-app/single-deploy/Dockerfile.server
@@ -8,8 +8,8 @@ FROM node:18-alpine
 # 设置工作目录
 WORKDIR /app
 
-# 安装 wget 用于健康检查
-RUN apk add --no-cache wget
+# 安装 wget 用于健康检查，mysql-client 用于数据库迁移
+RUN apk add --no-cache wget mysql-client
 
 # 复制 package 文件
 COPY chat-app/server/package*.json ./
