--- a/chat-app/single-deploy/docker-compose.yml
+++ b/chat-app/single-deploy/docker-compose.yml
@@ -83,6 +83,7 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       JWT_SECRET: ${JWT_SECRET}
+      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET:-${JWT_SECRET}}
       ALLOWED_ORIGINS: ${ALLOWED_ORIGINS:-*}
     volumes:
       - ./chat-app/server/uploads:/app/uploads
