管理后台-域名修复

--- a/chat-app/single-deploy/.env.example
+++ b/chat-app/single-deploy/.env.example
@@ -13,7 +13,11 @@
 #--------------------------------------
 # 域名配置
 #--------------------------------------
+# 主域名（聊天应用）
 DOMAIN=chat.example.com
+
+# 管理后台域名
+ADMIN_DOMAIN=admin.example.com
 
 #--------------------------------------
 # 数据库配置 (MySQL)
@@ -45,7 +49,7 @@ ADMIN_JWT_SECRET=your_admin_jwt_secret_key_here
 # CORS 配置
 #--------------------------------------
 # 允许的前端域名（多个用逗号分隔）
-ALLOWED_ORIGINS=https://chat.example.com
+ALLOWED_ORIGINS=https://chat.example.com,https://admin.example.com
 
 #--------------------------------------
 # Node.js 环境
