--- a/chat-app/single-deploy/nginx.conf
+++ b/chat-app/single-deploy/nginx.conf
@@ -1,6 +1,7 @@
 #======================================
 # Nginx 配置 - 单服务器部署
-# 将 YOUR_DOMAIN 替换为实际域名
+# YOUR_DOMAIN - 主域名（聊天应用）
+# ADMIN_DOMAIN - 管理后台子域名
 #======================================
 
 # 后端服务上游
@@ -8,6 +9,10 @@ upstream chat_backend {
     server 127.0.0.1:3000;
     keepalive 64;
 }
+
+#======================================
+# 主域名 - 聊天应用
+#======================================
 
 # HTTP 服务 - 重定向到 HTTPS
 server {
@@ -80,26 +85,6 @@ server {
     # 前端路由
     location / {
         try_files $uri $uri/ /index.html;
-
-        # HTML 文件不缓存
-        location ~* \.html$ {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-
-        # 静态资源缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 7d;
-            add_header Cache-Control "public, immutable";
-        }
-    }
-
-    # 管理后台前端
-    location /admin/ {
-        alias /opt/LT/chat-app/admin/dist/;
-        index index.html;
-        try_files $uri $uri/ /admin/index.html;
 
         # HTML 文件不缓存
         location ~* \.html$ {
@@ -228,6 +213,135 @@ server {
 
         # 不记录日志
         access_log off;
+    }
+
+    # 禁止访问隐藏文件
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+}
+
+#======================================
+# 管理后台子域名
+#======================================
+
+# HTTP 服务 - 重定向到 HTTPS
+server {
+    listen 80;
+    listen [::]:80;
+    server_name ADMIN_DOMAIN;
+
+    # Let's Encrypt 证书验证
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # 其他请求重定向到 HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+# HTTPS 管理后台服务
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name ADMIN_DOMAIN;
+
+    # SSL 证书配置（使用独立证书或通配符证书）
+    ssl_certificate /etc/letsencrypt/live/ADMIN_DOMAIN/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ADMIN_DOMAIN/privkey.pem;
+
+    # SSL 安全配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+
+    # SSL 会话缓存
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+
+    # OCSP Stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+
+    # 安全头部
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # 日志
+    access_log /var/log/nginx/admin-access.log;
+    error_log /var/log/nginx/admin-error.log;
+
+    # Gzip 压缩
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+
+    # 客户端请求限制
+    client_max_body_size 10M;
+
+    # 管理后台静态文件
+    root /opt/LT/chat-app/admin/dist;
+    index index.html;
+
+    # 前端路由
+    location / {
+        try_files $uri $uri/ /index.html;
+
+        # HTML 文件不缓存
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
+        }
+
+        # 静态资源缓存
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 7d;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
+    # API 代理（管理后台 API）
+    location /api/ {
+        proxy_pass http://chat_backend;
+        proxy_http_version 1.1;
+
+        # 请求头
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 超时设置
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # 缓冲设置
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+    }
+
+    # 上传文件（用于查看用户头像等）
+    location /uploads/ {
+        alias /opt/LT/chat-app/server/uploads/;
+
+        # 缓存设置
+        expires 30d;
+        add_header Cache-Control "public, immutable";
     }
 
     # 禁止访问隐藏文件
