--- a/chat-app/single-deploy/.env.example
+++ b/chat-app/single-deploy/.env.example
@@ -57,6 +57,24 @@ ALLOWED_ORIGINS=https://chat.example.com,https://admin.example.com
 NODE_ENV=production
 
 #--------------------------------------
+# 功能开关
+#--------------------------------------
+# 是否开启注册功能（true/false）
+FEATURE_REGISTER_ENABLED=false
+
+# 是否开启语音通话功能（true/false）
+FEATURE_VOICE_CALL_ENABLED=false
+
+#--------------------------------------
+# IP 注册限制
+#--------------------------------------
+# 是否启用 IP 注册限制（仅对推荐链接注册生效）
+IP_LIMIT_ENABLED=true
+
+# 每个 IP 每个推荐链接最多注册次数
+IP_LIMIT_MAX_PER_LINK=1
+
+#--------------------------------------
 # 备份配置（可选）
 #--------------------------------------
 # 备份保留天数
