--- a/chat-app/server/package.json
+++ b/chat-app/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
+    "@socket.io/redis-adapter": "^8.2.1",
     "mysql2": "^3.6.5",
     "redis": "^4.6.11",
     "jsonwebtoken": "^9.0.2",
