--- a/chat-app/docker-compose.yml
+++ b/chat-app/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       JWT_SECRET: your-super-secret-jwt-key-change-in-production
       # 功能开关
       FEATURE_REGISTER_ENABLED: "false"
-      FEATURE_VOICE_CALL_ENABLED: "false"
+      FEATURE_VOICE_CALL_ENABLED: "true"
       # IP注册限制
       IP_LIMIT_ENABLED: "true"
       IP_LIMIT_MAX_PER_LINK: "1"
