--- a/doudizhu-game/server/package.json
+++ b/doudizhu-game/server/package.json
@@ -20,11 +20,12 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.1",
-    "redis": "^5.10.0",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "redis": "^5.10.0",
+    "socket.io-client": "^4.8.3"
   }
 }
