--- a/doudizhu-game/server/package.json
+++ b/doudizhu-game/server/package.json
@@ -24,6 +24,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "axios": "^1.13.2",
     "nodemon": "^3.1.11",
     "redis": "^5.10.0",
     "socket.io-client": "^4.8.3"
